@@ -205,9 +205,172 @@ ZeroZ Stack serializes data dynamically using `BinarySerializer`. Each serialize
 | `0x1F` | char[] | 4-byte length + `N` × 2 bytes |
 | `0x20` | boolean[] | 4-byte length + `N` × 1 byte |
 | `0x21` | Lazy | `[String]` session-scoped handle. **Never the contents** — the client resolves it with an RMI round trip on first `get()` |
+| `0x22` | Record | `[String]` object id + `[String]` ClassName + components from the generated `<Record>_Serializer`, in canonical order |
+| `0x23` | Sealed | `[String]` the sealed base's FQCN, then the value itself as `0x07`, `0x22`, `0x0E` or `0x00` |
 
-Note the tag space (`0x00`–`0x21`) is independent of the frame opcode space; a tag byte never appears
+Note the tag space (`0x00`–`0x23`) is independent of the frame opcode space; a tag byte never appears
 where an opcode is expected.
+
+## Object identity, and how far it reaches
+
+Every model value is written with an object id. The second time the same instance is met, only that
+id goes out, as `0x0E`. That is what lets a graph contain loops and shared parts and arrive with its
+shape intact rather than as a tree of copies.
+
+**The rule is: identity holds within one top-level value, and not between two.**
+
+The set of "already written" instances is emptied whenever a value is written that was not reached
+from inside another one. So:
+
+```java
+Order order = new Order();
+order.setBilling(address);
+order.setShipping(address);          // the same Address instance
+send(order);                          // arrives as ONE address, in both fields
+
+send(List.of(address, address));      // arrives as TWO addresses
+```
+
+In the first case the two fields are reached from inside `order`, so the second is a reference. In
+the second case each element of the list *is* a top-level value, so each is written in full.
+
+Two consequences worth knowing before relying on either:
+
+- **Do not use `==` across a call boundary to decide whether two things are the same.** Compare by
+  id, or by `equals`. This is the one that costs an afternoon.
+- A model reached through a `List`, `Set`, `Map` or a field declared as a model type all behave
+  the same way. There is no longer a path that writes a model in place without recording it.
+
+## Nested models are written by reference, not in place
+
+Before 0.8.0, a field whose declared type was a model class was written straight into the buffer
+with nothing recorded about it. It saved a few bytes and cost three things:
+
+- two models referring to each other recursed until the stack ran out;
+- the same instance in two fields arrived as two objects;
+- a model nested inside a `@LiveSync` one was rebuilt with a plain constructor, so it never became a
+  tracked instance and edits to it were invisible.
+
+A model reached through a collection never had any of those problems, because collections always
+took the tagged path. Now every model-typed field takes it too. The cost is an id and a class name
+per nested model — bounded by how many model-typed fields a model has, not by how much data there
+is, since collections were already paying it.
+
+## Inheritance
+
+A model may extend another model, and **the base class's fields travel with it**. The base has no
+serializer of its own; what it declares is written as part of each concrete model below it, base
+fields first, then the subclass's own.
+
+An abstract model is never a value in its own right. It gets no serializer and no entry in the
+registry — it exists to hand its fields down. A field declared as an abstract model type still works:
+the tagged path dispatches on the runtime type.
+
+Two shapes are refused at compile time, both because they used to lose data silently:
+
+| Refused | Why |
+|---|---|
+| A model extending a class that is **not** a `@DataModel` and that declares instance fields | there is no way to know those fields belong on the wire, so they were dropped without a word. Annotate the base, or move the fields down. A base class with no fields needs no annotation. |
+| A model declaring a field name a base class already declares | both would be written, and both read back through the same accessor, so one would overwrite the other |
+
+## Records
+
+A `record` annotated `@DataModel` travels as `0x22`. The bytes look like an ordinary object; what
+differs is **when the value exists**.
+
+An ordinary model is created empty, registered under its id, and only then are its fields read into
+it. That order is what lets a graph point back at something still being read — the instance already
+exists, so a `0x0E` reference to it resolves.
+
+A record's components are final and are set only by its canonical constructor, so the reader has to
+do the opposite: read every component, then construct, then register under the id.
+
+The consequence is a real limit, and both sides state it rather than let it fail quietly:
+
+- **A record cannot take part in a reference cycle.** A cycle needs the record to exist while its own
+  components are still being read. The **writer** refuses when a value inside a record points back at
+  that record, naming the record and saying to use a class for the type that closes the loop. The
+  **reader** refuses a hand-built payload that does the same, rather than resolving the reference to
+  null. Use a class wherever the loop closes: a class is created empty and filled afterwards, so it
+  can point back at itself.
+- **The same record appearing twice is fine.** The second appearance is an ordinary `0x0E` reference,
+  and by the time the reader meets it the record has been built.
+
+A record still cannot be a persistence root: EclipseStore reaches fields directly and the JVM refuses
+that for records without `--add-exports java.base/jdk.internal.misc=ALL-UNNAMED`. That is a
+persistence rule, not a wire rule.
+
+Records are safe in the browser. TeaVM 0.15.0 lowers a record to an ordinary class, including the
+`equals`, `hashCode` and `toString` the compiler generates through `invokedynamic`, so a record used
+as a map key or a set element behaves in the browser as it does on the server.
+
+### The class a developer used to write, and the record they write now
+
+```java
+// Before — ten lines of ceremony, all of it required by how the reader worked
+@DataModel
+public class Money {
+    private long amount;
+    private String currency;
+    public Money() { }
+    public Money(long amount, String currency) {
+        this.amount = amount;
+        this.currency = currency;
+    }
+    public long getAmount() { return amount; }
+    public void setAmount(long amount) { this.amount = amount; }
+    public String getCurrency() { return currency; }
+    public void setCurrency(String currency) { this.currency = currency; }
+}
+
+// Now
+@DataModel
+public record Money(long amount, String currency) { }
+```
+
+`@LiveSync` and `@ClientWritable` are refused on a record at compile time. Both are about editing an
+object in place through its setters and reporting the change; a record has no setters and never
+changes.
+
+## Sealed types
+
+A value whose declared type is a sealed `@DataModel` interface or sealed abstract class travels as
+`0x23`: the base's own class name, then the value.
+
+```java
+@DataModel
+public sealed interface Message permits Text, Ping, Attachment { }
+
+@DataModel public record Text(String author, String body) implements Message { }
+@DataModel public record Ping(long sentAt) implements Message { }
+@DataModel public final class Attachment implements Message { /* ... */ }
+```
+
+A field, a list element, a call argument or a return value may now be a `Message`. What arrives is a
+`Text`, a `Ping` or an `Attachment` — the concrete type, with no cast and no kind field.
+
+**Why the base name is on the wire.** `sealed` means the compiler knows the complete list of classes
+the value may be. The annotation processor writes that list into the generated registrar, and the
+reader looks up the base the payload names and refuses any class that base does not permit —
+**before anything is created**. A payload naming a type outside the set fails with a message saying
+which type it named and which ones are permitted. A field declared as the sealed base additionally
+refuses a value of some *other* sealed family, so the check holds even where a cast would not.
+
+The rules the annotation processor enforces, each because the receiver could not act safely
+otherwise:
+
+| Rule | Why |
+|---|---|
+| Every permitted class is itself `@DataModel` | otherwise a payload naming it could not be built |
+| Every permitted class is `final` (a record already is) | a `non-sealed` member can be extended by classes outside the set, and the receiver could not tell them apart |
+| A permitted class is not itself sealed | the reader looks up one permitted set; a family of families has no single set to check against |
+| A sealed class base is `abstract` | a base that is also a value of its own would be neither in nor out of its set |
+| A plain, unsealed interface is refused | there is no list, so any class at all could be named |
+
+A sealed abstract class may declare fields the whole family shares. The base has no serializer of its
+own — what it declares is written as part of each member's bytes.
+
+The cost is one extra class-name string per value, on top of the one an object already carries.
 
 Resolving a lazy handle rides an RMI-shaped frame to the internal service `zeroz4j.lazy` (method
 `resolve`, one String argument: the handle), alongside `zeroz4j.signals` and `zeroz4j.livesync`. The
